public interface IServicioDescarga {
    public void descargar(String cancion, Usuario usuario);
}
